==> HaiMianBBao/PlumBL/PlumUSB/port/ch579/lg_usb_dc_port.c <==
#include "lg_usb_dc.h"
#include "lg_usbd_core.h"
#include "ch579_regs.h"
#include <stdlib.h>
#define CH579_USB (uint32_t *)0x40008000
#define EP_DIR_IN 1
#define EP_DIR_OUT 0
#define EPn_CTRL(epid) \
  *(volatile uint8_t *)(0x40008022 + epid * 4)
#define EPn_TX_LEN(epid) \
  *(volatile uint8_t *)(0x40008020 + epid * 4)
#define GET_EP_ID(ep_add) (uint8_t)(ep_add & 0x7f)
#define GET_EP_DIR(ep_add) (uint8_t)(ep_add & 0x80)
#define GET_INT_EP_ID \
  (volatile uint8_t)(R8_USB_INT_ST & MASK_UIS_ENDP)
#define GET_USB_INT_STATE \
  (volatile uint8_t)(R8_USB_INT_ST & MASK_UIS_TOKEN)
#define GET_SETUP_PACKET(data_add) \
  *(struct usb_setup_packet *)data_add
#define SET_DEVICE_ADDRESS(add) \
  R8_USB_DEV_AD = (R8_USB_DEV_AD & RB_UDA_GP_BIT) | add;
#define EPn_SET_TX_VALID(epid) \
  EPn_CTRL(epid) = EPn_CTRL(epid) & ~MASK_UEP_T_RES | UEP_T_RES_ACK;
#define EPn_SET_RX_VALID(epid) \
  EPn_CTRL(epid) = EPn_CTRL(epid) & ~MASK_UEP_R_RES | UEP_R_RES_ACK;
#define EPn_SET_TX_NAK(epid) \
  EPn_CTRL(epid) = EPn_CTRL(epid) & ~MASK_UEP_T_RES | UEP_T_RES_NAK;
#define EPn_SET_RX_NAK(epid) \
  EPn_CTRL(epid) = EPn_CTRL(epid) & ~MASK_UEP_R_RES | UEP_R_RES_NAK;
#define EPn_SET_TX_STALL(epid) \
  EPn_CTRL(epid) = EPn_CTRL(epid) & ~MASK_UEP_T_RES | UEP_T_RES_STALL
#define EPn_SET_RX_STALL(epid) \
  EPn_CTRL(epid) = EPn_CTRL(epid) & ~MASK_UEP_R_RES | UEP_R_RES_STALL
#define EPn_SET_TX_LEN(epid, len) \
  EPn_TX_LEN(epid) = len
#define EPn_SET_RX_LEN(epid, len)
#define EPn_GET_RX_LEN(epid) \
  R8_USB_RX_LEN

int usbd_set_address(const uint8_t address)
{
  if (address == 0)
  {
    R8_USB_DEV_AD = (R8_USB_DEV_AD & RB_UDA_GP_BIT) | address;
  }
  usb_dc_cfg.address = address;
  return 0;
}

int usbd_ep_clear_stall(const uint8_t ep)
{
  int ret;
  switch (ep)
  {
  case 0x82:
    R8_UEP2_CTRL = (R8_UEP2_CTRL & ~(RB_UEP_T_TOG | MASK_UEP_T_RES)) | UEP_T_RES_NAK;
    ret = 0;
    break;
  case 0x02:
    R8_UEP2_CTRL = (R8_UEP2_CTRL & ~(RB_UEP_R_TOG | MASK_UEP_R_RES)) | UEP_R_RES_ACK;
    ret = 0;
    break;
  case 0x81:
    R8_UEP1_CTRL = (R8_UEP1_CTRL & ~(RB_UEP_T_TOG | MASK_UEP_T_RES)) | UEP_T_RES_NAK;
    ret = 0;
    break;
  case 0x01:
    R8_UEP1_CTRL = (R8_UEP1_CTRL & ~(RB_UEP_R_TOG | MASK_UEP_R_RES)) | UEP_R_RES_ACK;
    ret = 0;
    break;
  default:
    /*!< Unsupported endpoint */
    ret = -1;
    break;
  }
  return ret;
}

int usb_dc_init(void)
{
  EP0_RAM_Addr = ep0_data_buff;
  EP1_RAM_Addr = ep1_data_buff;
  EP2_RAM_Addr = ep2_data_buff;
  EP3_RAM_Addr = ep3_data_buff;

  usb_dc_cfg.ep_in[0].ep_ram_addr = pEP0_DataBuf;
  usb_dc_cfg.ep_out[0].ep_ram_addr = pEP0_DataBuf;

  usb_dc_cfg.ep_in[1].ep_ram_addr = pEP1_IN_DataBuf;
  usb_dc_cfg.ep_out[1].ep_ram_addr = pEP1_OUT_DataBuf;

  usb_dc_cfg.ep_in[2].ep_ram_addr = pEP2_IN_DataBuf;
  usb_dc_cfg.ep_out[2].ep_ram_addr = pEP2_OUT_DataBuf;

  usb_dc_cfg.ep_in[3].ep_ram_addr = pEP3_IN_DataBuf;
  usb_dc_cfg.ep_out[3].ep_ram_addr = pEP3_OUT_DataBuf;

  usb_dc_cfg.ep_in[4].ep_ram_addr = pEP4_IN_DataBuf;
  usb_dc_cfg.ep_out[4].ep_ram_addr = pEP4_OUT_DataBuf;

  R8_USB_CTRL = 0x00; // 先设定模式,取消 RB_UC_CLR_ALL

  R8_UEP4_1_MOD = RB_UEP4_RX_EN | RB_UEP4_TX_EN | RB_UEP1_RX_EN | RB_UEP1_TX_EN; // 端点4 OUT+IN,端点1 OUT+IN
  R8_UEP2_3_MOD = RB_UEP2_RX_EN | RB_UEP2_TX_EN | RB_UEP3_RX_EN | RB_UEP3_TX_EN; // 端点2 OUT+IN,端点3 OUT+IN

  R16_UEP0_DMA = (uint16_t)(uint32_t)EP0_RAM_Addr;
  R16_UEP1_DMA = (uint16_t)(uint32_t)EP1_RAM_Addr;
  R16_UEP2_DMA = (uint16_t)(uint32_t)EP2_RAM_Addr;
  R16_UEP3_DMA = (uint16_t)(uint32_t)EP3_RAM_Addr;

  R8_UEP0_CTRL = UEP_R_RES_ACK | UEP_T_RES_NAK;
  R8_UEP1_CTRL = UEP_R_RES_ACK | UEP_T_RES_NAK | RB_UEP_AUTO_TOG;
  R8_UEP2_CTRL = UEP_R_RES_ACK | UEP_T_RES_NAK | RB_UEP_AUTO_TOG;
  R8_UEP3_CTRL = UEP_R_RES_ACK | UEP_T_RES_NAK | RB_UEP_AUTO_TOG;
  R8_UEP4_CTRL = UEP_R_RES_ACK | UEP_T_RES_NAK;

  R8_USB_DEV_AD = 0x00;
  R8_USB_CTRL = RB_UC_DEV_PU_EN | RB_UC_INT_BUSY | RB_UC_DMA_EN; // 启动USB设备及DMA，在中断期间中断标志未清除前自动返回NAK
  R8_USB_INT_FG = 0xFF;                                          // 清中断标志
  R16_PIN_ANALOG_IE |= RB_PIN_USB_IE;                            // 防止USB端口浮空
  R8_UDEV_CTRL = RB_UD_PD_DIS | RB_UD_PORT_EN;                   // 允许USB端口
  R8_USB_INT_EN = RB_UIE_SUSPEND | RB_UIE_BUS_RST | RB_UIE_TRANSFER;

  return 0;
}

void usb_isr_handler(void)
{
  uint8_t intflag;
  intflag = R8_USB_INT_FG;
  if (intflag & RB_UIF_TRANSFER)
  {
    uint32_t len;
    uint8_t reg = R8_USB_INT_ST & (MASK_UIS_TOKEN | MASK_UIS_ENDP);
    switch (reg & MASK_UIS_TOKEN) /*!< Analyze operation token and endpoint number */
    {
    case UIS_TOKEN_SETUP:
      R8_UEP0_CTRL = RB_UEP_R_TOG | RB_UEP_T_TOG | UEP_R_RES_ACK | UEP_T_RES_NAK;
      /*!< Get setup packet */
      usb_dc_cfg.setup = GET_SETUP_PACKET(usb_dc_cfg.ep_out[0].ep_ram_addr);
      if (usb_dc_cfg.setup.bmRequestType_b.Dir == USB_REQUEST_HOST_TO_DEVICE)
      {
        R8_UEP0_T_LEN = 0;
        EPn_SET_TX_VALID(0);
      }

      len = R8_USB_RX_LEN;
      if (len != 8)
      {
        /*!< Error */
        return;
      }
      else
      {
        /*!< call setup handler */
        usbd_notify_callback(USB_EVENT_SETUP_NOTIFY, NULL);
      }
      break;
    case UIS_TOKEN_IN:
      if (!(reg & 0x0F))
      {
        /*!< EP0 */
        switch (usb_dc_cfg.setup.bmRequestType_b.Dir)
        {
        case USB_REQUEST_DEVICE_TO_HOST:
          /*!< Get */
          R8_UEP0_CTRL ^= RB_UEP_T_TOG;
          /*!< Set ep0 tx nak */
          EPn_SET_TX_NAK(0);
          /*!<  */
          usbd_notify_callback(USB_EVENT_EP0_IN_NOTIFY, NULL);
          break;
        case USB_REQUEST_HOST_TO_DEVICE:
          /*!< set */
          switch (usb_dc_cfg.setup.bRequest)
          {
          case USB_SET_ADDRESS:
            /*!< Fill in the equipment address */
            R8_USB_DEV_AD = (R8_USB_DEV_AD & RB_UDA_GP_BIT) | usb_dc_cfg.address;
            /*!< No data returned T-NACK */
            R8_UEP0_CTRL |= UEP_R_RES_ACK | UEP_T_RES_NAK;
            break;
          default:
            /*!< PRINT("state over \n"); */
            /*!< Normal out state phase */
            R8_UEP0_CTRL |= UEP_R_RES_ACK | UEP_T_RES_NAK;
            break;
          }
          break;
        }
      }
      else
      {
        /*!< Others EP */
        EPn_SET_TX_NAK(reg & 0x0F);
        if ((reg & 0x07) == 0x04)
        {
          R8_UEP4_CTRL ^= RB_UEP_R_TOG;
        }
        usbd_notify_callback(USB_EVENT_EP_IN_NOTIFY, (uint32_t *)(reg & 0x07));
      }
      break;
    case UIS_TOKEN_OUT:
      if (!(reg & 0x0F))
      {
        /*!< EP0 */
        usbd_notify_callback(USB_EVENT_EP0_OUT_NOTIFY, (uint32_t *)&len);
        EPn_SET_RX_VALID(0);
      }
      else
      {
        /*!< Others EP */
        if ((reg & 0x0F) == 0x04)
        {
          R8_UEP4_CTRL ^= RB_UEP_R_TOG;
        }
        usbd_notify_callback(USB_EVENT_EP_OUT_NOTIFY, (uint32_t *)(reg & 0x07));
      }
      break;
    default:
      break;
    }
    R8_USB_INT_FG = RB_UIF_TRANSFER;
  }
  else if (intflag & RB_UIF_BUS_RST)
  {
    /*!< printf("reset \n"); */
    /*!< Configure endpoint 0 */
    struct usbd_endpoint_cfg ep0 = {
        .ep_addr = 0x80,
        .ep_mps = 64,
        .ep_transfer_type = USBD_EP_TYPE_CTRL};
    usbd_ep_open(&ep0);

    ep0.ep_addr = 0x00;
    usbd_ep_open(&ep0);

    R8_USB_DEV_AD = 0;
    R8_UEP0_CTRL = UEP_R_RES_ACK | UEP_T_RES_NAK;
    R8_UEP1_CTRL = UEP_R_RES_ACK | UEP_T_RES_NAK | RB_UEP_AUTO_TOG;
    R8_UEP2_CTRL = UEP_R_RES_ACK | UEP_T_RES_NAK | RB_UEP_AUTO_TOG;
    R8_UEP3_CTRL = UEP_R_RES_ACK | UEP_T_RES_NAK | RB_UEP_AUTO_TOG;
    R8_UEP4_CTRL = UEP_R_RES_ACK | UEP_T_RES_NAK;

    R8_USB_INT_FG = RB_UIF_BUS_RST;

    /*!< Call the reset callback in the protocol stack to register the endpoint callback function */
    usbd_notify_callback(USB_EVENT_RESET, NULL);
  }
  else if (intflag & RB_UIF_SUSPEND)
  {
    if (R8_USB_MIS_ST & RB_UMS_SUSPEND)
    {
      /*!< Suspend */
      usbd_notify_callback(USB_EVENT_SUSPEND, NULL);
    }
    else
    {
      /*!< Wake up */
      usbd_notify_callback(USB_EVENT_RESUME, NULL);
    }
    R8_USB_INT_FG = RB_UIF_SUSPEND;
  }
  else
  {
    R8_USB_INT_FG = intflag;
  }
}
