==> HaiMianBBao/PlumBL/PlumUSB/port/nrf5x/lg_usb_dc_port.c <==
#include <stdlib.h>
#include <stdint.h>
#include <stdbool.h>
#include "lg_usb_dc.h"
#include "lg_usbd_core.h"
#include "./nrf52840_regs.h"
#define EP_DIR_IN 1
#define EP_DIR_OUT 0
#define GET_EP_ID(ep_add) (uint8_t)(ep_add & 0x7f)
#define GET_EP_DIR(ep_add) (uint8_t)(ep_add & 0x80)
#define EP_NUMS 9
#define EP_MPS 64
#define GET_INT_EP_ID
#define GET_USB_INT_STATE
#define SET_DEVICE_ADDRESS(add)
#define EPn_SET_TX_VALID(epid)
#define EPn_SET_RX_VALID(epid) \
  NRF_USBD->SIZE.EPOUT[epid] = EP_MPS;
#define EPn_SET_TX_NAK(epid)
#define EPn_SET_RX_NAK(epid)
#define EPn_SET_TX_STALL(epid)
#define EPn_SET_RX_STALL(epid)
#define EPn_CLEAR_RX_STALL(epid)
#define EPn_CLEAR_TX_STALL(epid)
#define EPn_SET_TX_LEN(epid, len)
#define EPn_SET_RX_LEN(epid, len)
#define EPn_GET_RX_LEN(epid)
#define EPn_SET_FIFO_ADD(epid, address)
#define EP_ISO_NUM 8
#define NRF_USBD_BASE 0x40027000UL
#define NRF_USBD ((NRF_USBD_Type *)NRF_USBD_BASE)

int usbd_set_address(const uint8_t address)
{
  if (address == 0)
  {
    /*!< init 0 address */
    SET_DEVICE_ADDRESS(address);
  }
  else
  {
    /*!< For non-0 addresses, write the address to the register in the state phase of setting the address */
  }

  NRF_USBD->EVENTCAUSE |= NRF_USBD->EVENTCAUSE;
  NRF_USBD->EVENTS_USBEVENT = 0;

  NRF_USBD->INTENSET = USBD_INTEN_USBEVENT_Msk;
  //nothing to do, handled by hardware; but don't STALL
  usb_dc_cfg.address = address;
  return 1;
}

int usbd_ep_clear_stall(const uint8_t ep)
{
  /*!< ep id */
  uint8_t epid = GET_EP_ID(ep);
  uint8_t dir = GET_EP_DIR(ep);

  if (epid != 0 && epid != EP_ISO_NUM)
  {
    // reset data toggle to DATA0
    // First write this register with VALUE=Nop to select the endpoint, then either read it to get the status from
    // VALUE, or write it again with VALUE=Data0 or Data1
    NRF_USBD->DTOGGLE = ep;
    NRF_USBD->DTOGGLE = (USBD_DTOGGLE_VALUE_Data0 << USBD_DTOGGLE_VALUE_Pos) | ep;

    // clear stall
    NRF_USBD->EPSTALL = (USBD_EPSTALL_STALL_UnStall << USBD_EPSTALL_STALL_Pos) | ep;

    // Write any value to SIZE register will allow nRF to ACK/accept data
    if (dir == EP_DIR_OUT)
      NRF_USBD->SIZE.EPOUT[epid] = 0;

    __ISB();
    __DSB();
  }

  return 0;
}

int usb_dc_init(void)
{
  /*!< dc init */
  usb_dc_cfg.ep_in[0].ep_ram_addr = ep0_tx_buf_p;
  usb_dc_cfg.ep_in[1].ep_ram_addr = ep1_tx_buf_p;
  usb_dc_cfg.ep_in[2].ep_ram_addr = ep2_tx_buf_p;
  usb_dc_cfg.ep_in[3].ep_ram_addr = ep3_tx_buf_p;
  usb_dc_cfg.ep_in[4].ep_ram_addr = ep4_tx_buf_p;
  usb_dc_cfg.ep_in[5].ep_ram_addr = ep5_tx_buf_p;
  usb_dc_cfg.ep_in[6].ep_ram_addr = ep6_tx_buf_p;
  usb_dc_cfg.ep_in[7].ep_ram_addr = ep7_tx_buf_p;

  usb_dc_cfg.ep_out[0].ep_ram_addr = ep0_rx_buf_p;
  usb_dc_cfg.ep_out[1].ep_ram_addr = ep1_rx_buf_p;
  usb_dc_cfg.ep_out[2].ep_ram_addr = ep2_rx_buf_p;
  usb_dc_cfg.ep_out[3].ep_ram_addr = ep3_rx_buf_p;
  usb_dc_cfg.ep_out[4].ep_ram_addr = ep4_rx_buf_p;
  usb_dc_cfg.ep_out[5].ep_ram_addr = ep5_rx_buf_p;
  usb_dc_cfg.ep_out[6].ep_ram_addr = ep6_rx_buf_p;
  usb_dc_cfg.ep_out[7].ep_ram_addr = ep7_rx_buf_p;

  NVIC_EnableIRQ(USBD_IRQn);
  NRF_USBD->ENABLE = 0x01;
  return 0;
}

void usb_isr_handler(void)
{
  uint32_t const inten = NRF_USBD->INTEN;
  uint32_t int_status = 0;

  volatile uint32_t *regevt = &NRF_USBD->EVENTS_USBRESET;

  for (uint8_t i = 0; i < USBD_INTEN_EPDATA_Pos + 1; i++)
  {
    if ((inten & (1 << i)) && regevt[i])
    {
      int_status |= (1 << (i));

      // event clear
      regevt[i] = 0;
      __ISB();
      __DSB();
    }
  }

  if (int_status & USBD_INTEN_USBRESET_Msk)
  {
    bus_reset();
    // dcd_event_bus_reset(0, TUSB_SPEED_FULL, true);
    usbd_notify_callback(USB_EVENT_RESET, NULL);
  }

  // ISOIN: Data was moved to endpoint buffer, client will be notified in SOF
  if (int_status & USBD_INTEN_ENDISOIN_Msk)
  {
    usbd_ep_info *xfer = &(usb_dc_cfg.ep_in[EP_ISO_NUM]);

    xfer->actual_len = NRF_USBD->ISOIN.AMOUNT;
    // Data transferred from RAM to endpoint output buffer.
    // Next transfer can be scheduled after SOF.
    xfer->iso_in_transfer_ready = true;
  }
#if 0
  if (int_status & USBD_INTEN_SOF_Msk)
  {
    bool iso_enabled = false;

    // ISOOUT: Transfer data gathered in previous frame from buffer to RAM
    if (NRF_USBD->EPOUTEN & USBD_EPOUTEN_ISOOUT_Msk)
    {
      iso_enabled = true;
      xact_out_dma(EP_ISO_NUM);
    }

    // ISOIN: Notify client that data was transferred
    if (NRF_USBD->EPINEN & USBD_EPINEN_ISOIN_Msk)
    {
      iso_enabled = true;
      usbd_ep_info *xfer = &(usb_dc_cfg.ep_in[TUSB_DIR_IN]);
      if (xfer->iso_in_transfer_ready)
      {
        xfer->iso_in_transfer_ready = false;
        // TODO
        // dcd_event_xfer_complete(0, EP_ISO_NUM | TUSB_DIR_IN_MASK, xfer->actual_len, XFER_RESULT_SUCCESS, true);
      }
    }

    if (!iso_enabled)
    {
      // ISO endpoint is not used, SOF is only enabled one-time for remote wakeup
      // so we disable it now
      NRF_USBD->INTENCLR = USBD_INTENSET_SOF_Msk;
    }

    // TODO
    // dcd_event_bus_signal(0, DCD_EVENT_SOF, true);
  }
#endif
  if (int_status & USBD_INTEN_USBEVENT_Msk)
  {
    enum
    {
      EVT_CAUSE_MASK = USBD_EVENTCAUSE_SUSPEND_Msk | USBD_EVENTCAUSE_RESUME_Msk | USBD_EVENTCAUSE_USBWUALLOWED_Msk
    };
    uint32_t const evt_cause = NRF_USBD->EVENTCAUSE & EVT_CAUSE_MASK;
    NRF_USBD->EVENTCAUSE = evt_cause; // clear interrupt

    if (evt_cause & USBD_EVENTCAUSE_SUSPEND_Msk)
    {
      // Put controller into low power mode
      // Leave HFXO disable to application, since it may be used by other peripherals
      NRF_USBD->LOWPOWER = 1;
      usbd_notify_callback(USB_EVENT_SUSPEND, NULL);
    }

    if (evt_cause & USBD_EVENTCAUSE_USBWUALLOWED_Msk)
    {
      // USB is out of low power mode, and wakeup is allowed
      // Initiate RESUME signal
      NRF_USBD->DPDMVALUE = USBD_DPDMVALUE_STATE_Resume;
      NRF_USBD->TASKS_DPDMDRIVE = 1;

      // There is no Resume interrupt for remote wakeup, enable SOF for to report bus ready state
      // Clear SOF event in case interrupt was not enabled yet.
      if ((NRF_USBD->INTEN & USBD_INTEN_SOF_Msk) == 0)
        NRF_USBD->EVENTS_SOF = 0;
      NRF_USBD->INTENSET = USBD_INTENSET_SOF_Msk;
    }

    if (evt_cause & USBD_EVENTCAUSE_RESUME_Msk)
    {
      usbd_notify_callback(USB_EVENT_RESUME, NULL);
    }
  }

  /*!< Setup tokens are specific to the Control endpoint. */
  if (int_status & USBD_INTEN_EP0SETUP_Msk)
  {
    uint8_t setup[8] =
        {
            NRF_USBD->BMREQUESTTYPE, NRF_USBD->BREQUEST, NRF_USBD->WVALUEL, NRF_USBD->WVALUEH,
            NRF_USBD->WINDEXL, NRF_USBD->WINDEXH, NRF_USBD->WLENGTHL, NRF_USBD->WLENGTHH};
    usb_dc_cfg.setup = (struct usb_setup_packet)setup;
    // nrf5x hw auto handle set address, there is no need to inform usb stack

    if (!(USB_REQUEST_TO_DEVICE == usb_dc_cfg.setup.bmRequestType_b.Recipient &&
          USB_REQUEST_STANDARD == usb_dc_cfg.setup.bmRequestType_b.Type &&
          USB_REQUEST_SET_ADDRESS == usb_dc_cfg.setup.bRequest))
    {
      usbd_notify_callback(USB_EVENT_SETUP_NOTIFY, (void *)&(usb_dc_cfg.setup));
    }
  }
#if 0
  if (int_status & EDPT_END_ALL_MASK)
  {
    // DMA complete move data from SRAM <-> Endpoint
    // Must before endpoint transfer handling
    // edpt_dma_end();
  }

  //--------------------------------------------------------------------+
  /* Control/Bulk/Interrupt (CBI) Transfer
   *
   * Data flow is:
   *           (bus)              (dma)
   *    Host <-------> Endpoint <-------> RAM
   *
   * For CBI OUT:
   *  - Host -> Endpoint
   *      EPDATA (or EP0DATADONE) interrupted, check EPDATASTATUS.EPOUT[i]
   *      to start DMA. For Bulk/Interrupt, this step can occur automatically (without sw),
   *      which means data may or may not be ready (out_received flag).
   *  - Endpoint -> RAM
   *      ENDEPOUT[i] interrupted, transaction complete, sw prepare next transaction
   *
   * For CBI IN:
   *  - RAM -> Endpoint
   *      ENDEPIN[i] interrupted indicate DMA is complete. HW will start
   *      to move data to host
   *  - Endpoint -> Host
   *      EPDATA (or EP0DATADONE) interrupted, check EPDATASTATUS.EPIN[i].
   *      Transaction is complete, sw prepare next transaction
   *
   * Note: in both Control In and Out of Data stage from Host <-> Endpoint
   * EP0DATADONE will be set as interrupt source
   */
  //--------------------------------------------------------------------+

  /* CBI OUT: Endpoint -> SRAM (aka transaction complete)
   * Note: Since nRF controller auto ACK next packet without SW awareness
   * We must handle this stage before Host -> Endpoint just in case 2 event happens at once
   *
   * ISO OUT: Transaction must fit in single packet, it can be shorter then total
   * len if Host decides to sent fewer bytes, it this case transaction is also
   * complete and next transfer is not initiated here like for CBI.
   */
  for (uint8_t epnum = 0; epnum < EP_CBI_COUNT + 1; epnum++)
  {
    if (int_status & (1 << (USBD_INTEN_ENDEPOUT0_Pos + epnum)))
    {
      usbd_ep_info *xfer = &(usb_dc_cfg.ep_out[epnum]);
      uint8_t const xact_len = NRF_USBD->EPOUT[epnum].AMOUNT;

      xfer->buffer += xact_len;
      xfer->actual_len += xact_len;

      // Transfer complete if transaction len < Max Packet Size or total len is transferred
      if ((epnum != EP_ISO_NUM) && (xact_len == xfer->mps) && (xfer->actual_len < xfer->total_len))
      {
        if (epnum == 0)
        {
          // Accept next Control Out packet. TASKS_EP0RCVOUT also require EasyDMA
          edpt_dma_start(&NRF_USBD->TASKS_EP0RCVOUT);
        }
        else
        {
          // nRF auto accept next Bulk/Interrupt OUT packet
          // nothing to do
        }
      }
      else
      {
        xfer->total_len = xfer->actual_len;

        // CBI OUT complete
        // TODO
        // dcd_event_xfer_complete(0, epnum, xfer->actual_len, XFER_RESULT_SUCCESS, true);
      }
    }

    // Ended event for CBI IN : nothing to do
  }

  // Endpoint <-> Host ( In & OUT )
  if (int_status & (USBD_INTEN_EPDATA_Msk | USBD_INTEN_EP0DATADONE_Msk))
  {
    uint32_t data_status = NRF_USBD->EPDATASTATUS;
    NRF_USBD->EPDATASTATUS = data_status;
    __ISB();
    __DSB();

    // EP0DATADONE is set with either Control Out on IN Data
    // Since EPDATASTATUS cannot be used to determine whether it is control OUT or IN.
    // We will use BMREQUESTTYPE in setup packet to determine the direction
    bool const is_control_in = (int_status & USBD_INTEN_EP0DATADONE_Msk) && (NRF_USBD->BMREQUESTTYPE & TUSB_DIR_IN_MASK);
    bool const is_control_out = (int_status & USBD_INTEN_EP0DATADONE_Msk) && !(NRF_USBD->BMREQUESTTYPE & TUSB_DIR_IN_MASK);

    // CBI In: Endpoint -> Host (transaction complete)
    for (uint8_t epnum = 0; epnum < EP_CBI_COUNT; epnum++)
    {
      if (data_status & (1 << epnum) || (epnum == 0 && is_control_in))
      {
        usbd_ep_info *xfer = (usb_dc_cfg.ep_in[epnum]);
        uint8_t const xact_len = NRF_USBD->EPIN[epnum].AMOUNT;

        xfer->buffer += xact_len;
        xfer->actual_len += xact_len;

        if (xfer->actual_len < xfer->total_len)
        {
          // Start DMA to copy next data packet
          xact_in_dma(epnum);
        }
        else
        {
          // CBI IN complete
          // TODO
          // dcd_event_xfer_complete(0, epnum | TUSB_DIR_IN_MASK, xfer->actual_len, XFER_RESULT_SUCCESS, true);
        }
      }
    }

    // CBI OUT: Host -> Endpoint
    for (uint8_t epnum = 0; epnum < EP_CBI_COUNT; epnum++)
    {
      if (data_status & (1 << 16 + epnum) || (epnum == 0 && is_control_out))
      {
        usbd_ep_info *xfer = (usb_dc_cfg.ep_out[epnum]);
        if (xfer->actual_len < xfer->total_len)
        {
          xact_out_dma(epnum);
        }
        else
        {
          // Data overflow !!! Nah, nRF will auto accept next Bulk/Interrupt OUT packet
          // Mark this endpoint with data received
          xfer->data_received = true;
        }
      }
    }
  }
  #endif
}
